--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
             background-color: #40444b;
             color: #fff;
             outline: none;
+            resize: none;
+            transition: height 0.2s;
+            overflow: hidden;
         }
 
         .send-button {
@@ -109,7 +112,7 @@
             document.getElementById('userInput').value = '';
 
             // Make a request to the ChatGPT API
-            const response = await fetch('https://api.openai.com/v1/chat/completions', {
+            const response = await fetch('https://api.openai.com/v1/engines/gpt-3.5-turbo/completions', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
@@ -118,10 +121,6 @@
                 body: JSON.stringify({
                     model: 'gpt-3.5-turbo',
                     messages: [
-                        {
-                            role: 'system',
-                            content: 'You are a helpful assistant.'
-                        },
                         {
                             role: 'user',
                             content: userInput
@@ -136,6 +135,12 @@
             const botMessage = data.choices[0].message.content;
             appendMessage('Bot: ' + botMessage, 'bot');
         }
+
+        // Add this script to handle dynamic resizing of the input box
+        document.getElementById('userInput').addEventListener('input', function() {
+            this.style.height = 'auto';
+            this.style.height = this.scrollHeight + 'px';
+        });
     </script>
 </body>
 </html>
