--- a/index.html
+++ b/index.html
@@ -91,56 +91,66 @@
     </div>
 
     <script>
-        function appendMessage(message, role) {
-            const chatMessages = document.getElementById('chatMessages');
-            const messageElement = document.createElement('div');
-            messageElement.textContent = message;
-            messageElement.classList.add('message', role);
-            chatMessages.appendChild(messageElement);
-            chatMessages.scrollTop = chatMessages.scrollHeight;
+        let apiKey = prompt("Please enter your ChatGPT API key:");
+        if (!apiKey) {
+            alert("You need to enter your API key for the chat to work. Please refresh the page and try again.");
+        } else {
+            // Call the function to initialize the chat application
+            initializeChat(apiKey);
         }
 
-        async function sendMessage() {
-            const userInput = document.getElementById('userInput').value;
-
-            if (!userInput.trim()) {
-                return;
+        function initializeChat(apiKey) {
+            function appendMessage(message, role) {
+                const chatMessages = document.getElementById('chatMessages');
+                const messageElement = document.createElement('div');
+                messageElement.textContent = message;
+                messageElement.classList.add('message', role);
+                chatMessages.appendChild(messageElement);
+                chatMessages.scrollTop = chatMessages.scrollHeight;
             }
 
-            appendMessage('You: ' + userInput, 'user');
+            async function sendMessage() {
+                const userInput = document.getElementById('userInput').value;
 
-            document.getElementById('userInput').value = '';
+                if (!userInput.trim()) {
+                    return;
+                }
 
-            // Make a request to the ChatGPT API
-            const response = await fetch('https://api.openai.com/v1/engines/gpt-3.5-turbo/completions', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                    'Authorization': 'Bearer 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' // Replace with your actual API key
-                },
-                body: JSON.stringify({
-                    model: 'gpt-3.5-turbo',
-                    messages: [
-                        {
-                            role: 'user',
-                            content: userInput
-                        }
-                    ]
-                })
+                appendMessage('You: ' + userInput, 'user');
+
+                document.getElementById('userInput').value = '';
+
+                // Make a request to the ChatGPT API
+                const response = await fetch('https://api.openai.com/v1/engines/gpt-3.5-turbo/completions', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'Authorization': `Bearer ${apiKey}`
+                    },
+                    body: JSON.stringify({
+                        model: 'gpt-3.5-turbo',
+                        messages: [
+                            {
+                                role: 'user',
+                                content: userInput
+                            }
+                        ]
+                    })
+                });
+
+                const data = await response.json();
+
+                // Display the bot's response in the chat container
+                const botMessage = data.choices[0].message.content;
+                appendMessage('Bot: ' + botMessage, 'bot');
+            }
+
+            // Add this script to handle dynamic resizing of the input box
+            document.getElementById('userInput').addEventListener('input', function() {
+                this.style.height = 'auto';
+                this.style.height = this.scrollHeight + 'px';
             });
-
-            const data = await response.json();
-
-            // Display the bot's response in the chat container
-            const botMessage = data.choices[0].message.content;
-            appendMessage('Bot: ' + botMessage, 'bot');
         }
-
-        // Add this script to handle dynamic resizing of the input box
-        document.getElementById('userInput').addEventListener('input', function() {
-            this.style.height = 'auto';
-            this.style.height = this.scrollHeight + 'px';
-        });
     </script>
 </body>
 </html>
