--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
             cursor: pointer;
             margin-left: 8px;
         }
+
+        .typing-indicator {
+            font-style: italic;
+            color: #aaa;
+        }
     </style>
 </head>
 <body>
@@ -109,6 +114,20 @@
                 chatMessages.scrollTop = chatMessages.scrollHeight;
             }
 
+            function showTypingIndicator() {
+                const typingIndicator = document.createElement('div');
+                typingIndicator.textContent = 'Bot is typing...';
+                typingIndicator.classList.add('message', 'bot-message', 'typing-indicator');
+                document.getElementById('chatMessages').appendChild(typingIndicator);
+            }
+
+            function hideTypingIndicator() {
+                const typingIndicator = document.querySelector('.typing-indicator');
+                if (typingIndicator) {
+                    typingIndicator.remove();
+                }
+            }
+
             async function sendMessage() {
                 const userInput = document.getElementById('userInput').value;
 
@@ -119,6 +138,8 @@
                 appendMessage('You: ' + userInput, 'user');
 
                 document.getElementById('userInput').value = '';
+
+                showTypingIndicator();
 
                 // Make a request to the ChatGPT API
                 const response = await fetch('https://api.openai.com/v1/engines/gpt-3.5-turbo/completions', {
@@ -137,6 +158,8 @@
                         ]
                     })
                 });
+
+                hideTypingIndicator();
 
                 const data = await response.json();
 
