--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
         }
 
         function initializeChat(apiKey) {
+            const chatHistory = []; // Store chat history in an array
+
             function appendMessage(message, role) {
                 const chatMessages = document.getElementById('chatMessages');
                 const messageElement = document.createElement('div');
@@ -125,7 +127,10 @@
             function hideTypingIndicator() {
                 const typingIndicator = document.querySelector('.typing-indicator');
                 if (typingIndicator) {
-                    typingIndicator.remove();
+                    // Introduce a 1-second delay before hiding the typing indicator
+                    setTimeout(() => {
+                        typingIndicator.remove();
+                    }, 1000);
                 }
             }
 
@@ -142,7 +147,10 @@
 
                 showTypingIndicator();
 
-                // Make a request to the ChatGPT API
+                // Add the user message to the chat history
+                chatHistory.push({ role: 'user', content: userInput });
+
+                // Make a request to the ChatGPT API with the conversation history
                 const response = await fetch('https://api.openai.com/v1/chat/completions', {
                     method: 'POST',
                     headers: {
@@ -151,16 +159,7 @@
                     },
                     body: JSON.stringify({
                         model: 'gpt-3.5-turbo',
-                        messages: [
-                            {
-                                role: 'system',
-                                content: 'You are a helpful assistant.'
-                            },
-                            {
-                                role: 'user',
-                                content: userInput
-                            }
-                        ]
+                        messages: [...chatHistory] // Include the conversation history in the API request
                     })
                 });
 
@@ -168,8 +167,11 @@
 
                 const data = await response.json();
 
-                // Display the bot's response in the chat container
+                // Add the bot message to the chat history
                 const botMessage = data.choices[0].message.content;
+                chatHistory.push({ role: 'bot', content: botMessage });
+
+                // Display the bot's response in the chat container
                 appendMessage('Bot: ' + botMessage, 'bot');
             }
 
